# restaurant-system-Cpp

./: CMakeLists.txt  Cook.cpp  Cook.h  Dish.cpp  Dish.h  Employee.cpp  Employee.h  README.md  RestaurantAdmin.cpp  RestaurantAdmin.h  Waiter.cpp  Waiter.h  dishes.txt  dishes2.txt  io.cpp  io.h  main.cpp
